--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -368,6 +368,35 @@
   PAGES        = "",
   YEAR         = "2014",
 }
+@article{Malik:2014ggr,
+      author         = "Malik, Sarah and McCabe, Christopher and Araujo, Henrique
+                        and Belyaev, A. and Boehm, Celine and others",
+      title          = "{Interplay and Characterization of Dark Matter Searches
+                        at Colliders and in Direct Detection Experiments}",
+      year           = "2014",
+      eprint         = "1409.4075",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "KCL-PH-TH-2014-37, LCTS-2014-36, CERN-PH-TH-2014-180",
+      SLACcitation   = "%%CITATION = ARXIV:1409.4075;%%",
+}
+@article{Harris:2014hga,
+      author         = "Harris, Philip and Khoze, Valentin V. and Spannowsky,
+                        Michael and Williams, Ciaran",
+      title          = "{Constraining Dark Sectors at Colliders: Beyond the
+                        Effective Theory Approach}",
+      journal        = "Phys.Rev.",
+      number         = "5",
+      volume         = "D91",
+      pages          = "055009",
+      doi            = "10.1103/PhysRevD.91.055009",
+      year           = "2015",
+      eprint         = "1411.0535",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IPPP-14-94, DCPT-14-188",
+      SLACcitation   = "%%CITATION = ARXIV:1411.0535;%%",
+}
 @ARTICLE{Chang:2014,
   AUTHOR       = "Spencer Chang and Ralph Edezhath and Jeffrey Hutchinson and Markus Luty",
   TITLE        = "{Effective WIMPs}",
@@ -1021,4 +1050,182 @@
       primaryClass   = "hep-ex",
       reportNumber   = "CERN-PH-EP-2014-229",
       SLACcitation   = "%%CITATION = ARXIV:1410.4031;%%",
+}
+@article{Fox:2011qd,
+      author         = "Fox, Patrick J. and Liu, Jia and Tucker-Smith, David and
+                        Weiner, Neal",
+      title          = "{An Effective Z'}",
+      journal        = "Phys.Rev.",
+      volume         = "D84",
+      pages          = "115006",
+      doi            = "10.1103/PhysRevD.84.115006",
+      year           = "2011",
+      eprint         = "1104.4127",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-11-179-T",
+      SLACcitation   = "%%CITATION = ARXIV:1104.4127;%%",
+}
+@article{Kozaczuk:2015bea,
+      author         = "Kozaczuk, Jonathan and Martin, Travis A. W.",
+      title          = "{Extending LHC Coverage to Light Pseudoscalar Mediators
+                        and Coy Dark Sectors}",
+      journal        = "JHEP",
+      volume         = "1504",
+      pages          = "046",
+      doi            = "10.1007/JHEP04(2015)046",
+      year           = "2015",
+      eprint         = "1501.07275",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1501.07275;%%",
+}
+@article{Buchmueller:2013dya,
+      author         = "Buchmueller, O. and Dolan, Matthew J. and McCabe,
+                        Christopher",
+      title          = "{Beyond Effective Field Theory for Dark Matter Searches
+                        at the LHC}",
+      journal        = "JHEP",
+      volume         = "1401",
+      pages          = "025",
+      doi            = "10.1007/JHEP01(2014)025",
+      year           = "2014",
+      eprint         = "1308.6799",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IPPP-13-63, DCPT-13-128",
+      SLACcitation   = "%%CITATION = ARXIV:1308.6799;%%",
+}
+@article{Alves:2011wf,
+      author         = "Alves, Daniele and others",
+      title          = "{Simplified Models for LHC New Physics Searches}",
+      collaboration  = "LHC New Physics Working Group",
+      journal        = "J.Phys.",
+      volume         = "G39",
+      pages          = "105005",
+      doi            = "10.1088/0954-3899/39/10/105005",
+      year           = "2012",
+      eprint         = "1105.2838",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-PUB-15045, FERMILAB-PUB-11-842-A-PPD",
+      SLACcitation   = "%%CITATION = ARXIV:1105.2838;%%",
+}
+@article{Dolan:2014ska,
+      author         = "Dolan, Matthew J. and McCabe, Christopher and Kahlhoefer,
+                        Felix and Schmidt-Hoberg, Kai",
+      title          = "{A taste of dark matter: Flavour constraints on
+                        pseudoscalar mediators}",
+      journal        = "JHEP",
+      volume         = "1503",
+      pages          = "171",
+      doi            = "10.1007/JHEP03(2015)171",
+      year           = "2015",
+      eprint         = "1412.5174",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-14-238, SLAC-PUB-16179",
+      SLACcitation   = "%%CITATION = ARXIV:1412.5174;%%",
+}
+@article{Goodman:2010yf,
+      author         = "Goodman, Jessica and Ibe, Masahiro and Rajaraman, Arvind
+                        and Shepherd, William and Tait, Tim M.P. and others",
+      title          = "{Constraints on Light Majorana dark Matter from
+                        Colliders}",
+      journal        = "Phys.Lett.",
+      volume         = "B695",
+      pages          = "185-188",
+      doi            = "10.1016/j.physletb.2010.11.009",
+      year           = "2011",
+      eprint         = "1005.1286",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "UCI-HEP-TR-2010-09",
+      SLACcitation   = "%%CITATION = ARXIV:1005.1286;%%",
+}
+@article{Goodman:2011jq,
+      author         = "Goodman, Jessica and Shepherd, William",
+      title          = "{LHC Bounds on UV-Complete Models of Dark Matter}",
+      year           = "2011",
+      eprint         = "1111.2359",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "UCI-HEP-TR-2011-22",
+      SLACcitation   = "%%CITATION = ARXIV:1111.2359;%%",
+}
+@article{An:2013xka,
+      author         = "An, Haipeng and Wang, Lian-Tao and Zhang, Hao",
+      title          = "{Dark matter with $t$-channel mediator: a simple step
+                        beyond contact interaction}",
+      journal        = "Phys.Rev.",
+      number         = "11",
+      volume         = "D89",
+      pages          = "115014",
+      doi            = "10.1103/PhysRevD.89.115014",
+      year           = "2014",
+      eprint         = "1308.0592",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IIT-CAPP-13-06, ANL-HEP-PR-13-38",
+      SLACcitation   = "%%CITATION = ARXIV:1308.0592;%%",
+}
+@article{Bell:2012rg,
+      author         = "Bell, Nicole F. and Dent, James B. and Galea, Ahmad J.
+                        and Jacques, Thomas D. and Krauss, Lawrence M. and others",
+      title          = "{Searching for Dark Matter at the LHC with a Mono-Z}",
+      journal        = "Phys.Rev.",
+      volume         = "D86",
+      pages          = "096011",
+      doi            = "10.1103/PhysRevD.86.096011",
+      year           = "2012",
+      eprint         = "1209.0231",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1209.0231;%%",
+}
+@article{Lin:2013sca,
+      author         = "Lin, Tongyan and Kolb, Edward W. and Wang, Lian-Tao",
+      title          = "{Probing dark matter couplings to top and bottom quarks
+                        at the LHC}",
+      journal        = "Phys.Rev.",
+      number         = "6",
+      volume         = "D88",
+      pages          = "063510",
+      doi            = "10.1103/PhysRevD.88.063510",
+      year           = "2013",
+      eprint         = "1303.6638",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1303.6638;%%",
+}
+@article{Lee:2013bua,
+      author         = "Lee, Hyun Min and Park, Myeonghun and Sanz, Veronica",
+      title          = "{Gravity-mediated (or Composite) Dark Matter}",
+      journal        = "Eur.Phys.J.",
+      volume         = "C74",
+      pages          = "2715",
+      doi            = "10.1140/epjc/s10052-014-2715-8",
+      year           = "2014",
+      eprint         = "1306.4107",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2013-143, KIAS-P13032",
+      SLACcitation   = "%%CITATION = ARXIV:1306.4107;%%",
+}
+@article{Allanach:2002gn,
+      author         = "Allanach, B.C. and Odagiri, K. and Palmer, M.J. and
+                        Parker, Michael Andrew and Sabetfakhri, A. and others",
+      title          = "{Exploring small extra dimensions at the large hadron
+                        collider}",
+      journal        = "JHEP",
+      volume         = "0212",
+      pages          = "039",
+      doi            = "10.1088/1126-6708/2002/12/039",
+      year           = "2002",
+      eprint         = "hep-ph/0211205",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CAVENDISH-HEP-02-18, CERN-TH-2002-227, LAPTH-941-02,
+                        KEK-TH-851, ATL-COM-PHYS-2002-043",
+      SLACcitation   = "%%CITATION = HEP-PH/0211205;%%",
 }
