--- a/doc/tex/EWSpecificModels_SVMediators.tex
+++ b/doc/tex/EWSpecificModels_SVMediators.tex
@@ -144,7 +144,8 @@ generally follow those in Section~\ref{subsec:MonojetLikeModels},
 even though fewer diagrams are involved.   
 A representative Feynman diagram can be
 constructed by replacing a gluon in Fig.~\ref{fig:tchannelMonojet}
-with a $\gamma,W,Z$ boson.
+with a $\gamma,W,Z$ boson. See Ref.~\cite{Bell:2012rg} for a theoretical overview.
+
 
 Figure~\ref{fig:TChan_EW_Zhad_MET} shows the MET distribution for the hadronic Z+MET final state, 
 with varying dark matter and mediator mass, before any selection. 
