--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -39,3 +39,6 @@ simulate signals and related uncertainties.
 Finally, it makes a recommendation on a scan of parameters within
 those models based on supporting material.
 
+Accompanying this document is a short summary containing only the
+implementation instructions necessary for the two collaborations to
+prepare Monte Carlo simulation.
