--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -1,4 +1,4 @@
-A model of bottom-flavored Dark Matter ($b$-FDM) has been proposed in Ref.~\cite{Agrawal:2014una} to explain the Galactic Center (GC) gamma-ray excess observed in data collected by the Fermi-LAT collaboration~\cite{Daylan:2014rsa}.
+Models of bottom-flavored Dark Matter have been proposed in Refs.~\cite{Lin:2013sca,Agrawal:2014una}. We focus on the $b$-FDM model of Ref.~\cite{Agrawal:2014una}, created to explain the Galactic Center (GC) gamma-ray excess observed in data collected by the Fermi-LAT collaboration~\cite{Daylan:2014rsa}.
 
 The increase from 8 to 13 TeV will lead to large cross section improvements, as shown in Appendix~\ref{app:xsecs_bFDM}. 
 %Production of heavier mediators requires high $x$ in the PDFs, and 
@@ -19,7 +19,7 @@ An annihilation cross section consistent with the gamma-ray excess can be achiev
 
 \section{Parameter scan}
 
-The nature of the model doesn't allow to derive a simple scaling behaviour which would allow us reduce the number of points to be simulated. This is because of the interference of diagrams with QCD production of the mediator (which scale as $g^0$) with diagrams that scale with $g$.~\Todo{Does the kinematic always change with mDM and coupling, in all cases? This model is close to a $t-$channel colored scalar mediator so the conclusions should be similar.]}
+The nature of the model doesn't allow to derive a simple scaling behaviour which would allow us reduce the number of points to be simulated. This is because of the interference of diagrams with QCD production of the mediator (which scale as $g^0$) with diagrams that scale with $g$.~\Todo{Does the kinematic always change with mDM and coupling, in all cases? This model is close to a $t-$channel colored scalar mediator so the conclusions should be similar.}
 
 The coupling can be chosen as a discrete set of values $g=0.5,1,2,3...$ for each mass point, which would allow a bound on $g$ to be determined.  The coupling could also be chosen to fullfill constraints from the relic density (see Appendix~\ref{app:Relic_Density_bFDM}, with corresponding cross sections in Tables~\ref{tab:g_relic_13T}-\ref{tab:g1_8T}). A sizable, $O(1)$ coupling benchmark such as $g=1$ should be considered for each mass point since this would be a distinctive feature of this benchmark from SUSY models with sbottom squarks.
 
