--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -10,14 +10,20 @@
 % http://arxiv.org/abs/arXiv:1402.2285, 
 % and http://arxiv.org/abs/arXiv:1409.2893
 
-The preceding sections address models
-with a Dirac fermion coupled to the SM through exchange of a
-neutral spin-0 or spin-1 in an $s$-channel process.
-A $t$-channel process may couple the SM and DM directly,
-leading to a different phenomenology.
-Here, we examine a model where $\chi$ is a Standard Model (SM) singlet,
-the mediating particle, labeled $\phi$, is charged and coloured, and
-the SM particle is a quark.
+The preceding sections address models with a Dirac fermion coupled to
+the SM through exchange of a neutral spin-0 or spin-1 in an
+$s$-channel process.  A $t$-channel process may couple the SM and DM
+directly, leading to a different phenomenology.  Here, we examine a
+model where $\chi$ is a Standard Model (SM) singlet, a Dirac
+fermion\footnote{Though outside the scope of this report, a colored
+  vector $t$-channel mediator with vector dark matter may also be
+  worthy of study. The UV completion of such models would look like an
+  RS KK gluon,for example. In these case, it is expcted that the most
+  interesting mediator masses will be of order several TeV.}; the
+mediating particle, labeled $\phi$, is charged and coloured; and the
+SM particle is a quark. Such models have been studied in
+Refs.~\cite{An:2013xka,Papucci:2014iwa}.
+
 Following the example of Ref.~\cite{Papucci:2014iwa}, the interaction Lagrangian is written as
 
 \begin{equation}
@@ -82,14 +88,6 @@ For a Majorana fermion, $q\bar q,\bar q\bar q,$ and $qq$ production
 would be possible with the latter having a pronounced enhancement
 at the LHC.
 
-
-%% An interesting point of difference
-%% with the $s$-channel simplified models is that the mediator can
-%% radiate a SM object, such as a jet or gauge boson. The forum has also
-%% studied MET+$Z$ production where, in diagrams of the first type, one
-%% of the initial quarks radiates $Z$ boson instead of a gluon, or the
-%% boson is radiated off the internal scalar line \todo{cite published
-%%   ATLAS analysis}. 
 
 This model is similar to the MSSM with only light squarks and
 a neutralino, except for two distinct points:  the $\chi$ is
