--- a/doc/tex/SimplifiedModelsIntro.tex
+++ b/doc/tex/SimplifiedModelsIntro.tex
@@ -9,9 +9,9 @@ Dark matter has not yet been seen in particle physics experiments, and
 there is no evidence for non-gravitational interactions between dark
 matter and Standard Model particles.  If such interactions exist,
 pairs of dark matter particles could be produced at the LHC, leading
-to so-called 'mono--X' signatures.
+to so-called 'mono-X' signatures.
 
-Run 1 searches for 'mono--X' signatures at ATLAS and CMS employed an
+Run 1 searches for 'mono-X' signatures at ATLAS and CMS employed an
 effective field theory \cite{Goodman:2010ku} to quantify the reach of
 the analyses and to allow comparison with direct dark matter detection
 experiments. There were several reasons for this.  First, the
