One addition to bibliography
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@180 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1051,6 +1051,22 @@
       reportNumber   = "CERN-PH-EP-2014-229",
       SLACcitation   = "%%CITATION = ARXIV:1410.4031;%%",
 }
+
+@article{Agrawal:2014aoa,
+	author         = "Agrawal, Prateek and Blanke, Monika and Gemmler, Katrin",
+	title          = "{Flavored dark matter beyond Minimal Flavor Violation}",
+	journal        = "JHEP",
+	volume         = "1410",
+	pages          = "72",
+	doi            = "10.1007/JHEP10(2014)072",
+	year           = "2014",
+	eprint         = "1405.6709",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CERN-PH-TH-2014-098, FERMILAB-PUB-14-141-T",
+	SLACcitation   = "%%CITATION = ARXIV:1405.6709;%%",
+}
+
 @article{Fox:2011qd,
       author         = "Fox, Patrick J. and Liu, Jia and Tucker-Smith, David and
                         Weiner, Neal",
